[docker] Add Readme and improve run script

--- a/docker/.env
+++ b/docker/.env
@@ -1,4 +1,5 @@
-DGC_SOURCE="./data/source"
-DGC_DATA="./data/data"
-DGC_RESULTS="./data/results"
-DGC_DB="./data/db"
+DGC_BASE="./"
+DGC_SOURCE="${DGC_BASE}/data/source"
+DGC_DATA="${DGC_BASE}/data/data"
+DGC_RESULTS="${DGC_BASE}/data/results"
+DGC_DB="${DGC_BASE}/data/db"
