--- a/docker/.env
+++ b/docker/.env
@@ -1,5 +1,5 @@
-DGC_BASE="./"
-DGC_SOURCE="${DGC_BASE}/data/source"
-DGC_DATA="${DGC_BASE}/data/data"
-DGC_RESULTS="${DGC_BASE}/data/results"
-DGC_DB="${DGC_BASE}/data/db"
+DGC_BASE="./data"
+DGC_SOURCE="${DGC_BASE}/source"
+DGC_DATA="${DGC_BASE}/data"
+DGC_RESULTS="${DGC_BASE}/results"
+DGC_DB="${DGC_BASE}/db"
